feat: set up CI/CD pipeline with AWS CodeDeploy, EC2, and S3

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,9 @@ jobs:
         run: npm ci
 
       - name: .env 파일 만들기
-        run: echo '${{ secrets.ENV }}' > .env
+        run: |
+          touch .env
+          echo '${{ secrets.ENV }}' >> .env
 
       - name: 테스트 코드 실행
         run: npm run test
@@ -30,30 +32,24 @@ jobs:
         run: npm run build
 
       - name: 압축하기
-        run: tar -czvf project.tar.gz dist .env package.json package-lock.json
+        run:
+          | # 압축할 파일들을 지정 #Code deploy agent는 appspec.yml 파일을 실행
+          tar -czvf $GITHUB_SHA.tar.gz appspec.yml scripts dist .env package.json package-lock.json
 
-      - name: SCP로 EC2에 빌드된 파일 전송하기
-        uses: appleboy/scp-action@v0.1.7
+      - name: AWS Resource에 접근할 수 있게 AWS credentials 설정
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: project.tar.gz
-          target: /home/ubuntu/instagram-server/tobe
+          aws-region: ap-northeast-2
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: SSH로 EC2에 접속하기
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          script_stop: true
-          script: |
-            rm -rf /home/ubuntu/instagram-server/current
-            mkdir /home/ubuntu/instagram-server/current
-            mv /home/ubuntu/instagram-server/tobe/project.tar.gz /home/ubuntu/instagram-server/current/project.tar.gz
-            cd /home/ubuntu/instagram-server/current
-            tar -xvf project.tar.gz
-            npm i
-            pm2 kill
-            pm2 start dist/main.js --name "backend-server"
+      - name: S3에 프로젝트 폴더 업로드하기
+        run: aws s3 cp --region ap-eu-west-2 ./$GITHUB_SHA.tar.gz s3://linond-server/$GITHUB_SHA.tar.gz
+
+      - name: Code Deploy를 활용해 EC2에 프로젝트 코드 배포
+        run: |
+          aws deploy create-deployment \
+            --application-name linond-server \
+            --deployment-config-name CodeDeployDefault.AllAtOnce \
+            --deployment-group-name Production \
+            --s3-location bucket=linond-server,bundleType=tgz,key=$GITHUB_SHA.tar.gz
