chore: translate comments to English

--- a/appspec.yml
+++ b/appspec.yml
@@ -2,10 +2,10 @@ version: 0.0
 os: linux
 
 files:
-  # S3에 저장한 파일들 중 destination(AWS EC2)으로 이동시킬 대상을 지정한다.
-  # / 이라고 지정하면 S3에 저장한 전체 파일을 뜻한다.
+  # Specifies which files from S3 should be transferred to the destination (EC2).
+  # Using / means all files in the S3 bundle will be transferred.
   - source: /
-    # EC2의 어떤 경로에 저장할 지 지정한다.
+    # Specifies the destination path on the EC2 instance.
     destination: /home/ubuntu/linond-server
 
 permissions:
